--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+  <app-simple-http></app-simple-http>
+  <hr/>
+  <app-more-http-requests></app-more-http-requests>
+  <hr/>
+  <app-you-tube-search></app-you-tube-search> 
+ 
+  
+ 
+</div>
